kubernetes/migration/be.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcenter-backend-deployment
  namespace: tc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testcenter-backend
  template:
    metadata:
      labels:
        app: testcenter-backend
    spec:
      containers:
        - name: testcenter-backend-container
          image: iqbberlin/testcenter-backend:15.3.4
          volumeMounts:
          - name: backend-data
            mountPath: /var/www/testcenter/data
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: testcenter-backend-vo-data

---
apiVersion: v1
kind: Service
metadata:
  name: testcenter-backend-service
  namespace: tc
spec:
  selector:
    app: testcenter-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
