kubernetes/migration/db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcenter-db-deployment
  namespace: tc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testcenter-db
  template:
    metadata:
      labels:
        app: testcenter-db
    spec:
      containers:
      - name: testcenter-db-container
        image: mysql:8.0
        args: [
          "--explicit-defaults-for-timestamp=TRUE",
          "--sql-mode=PIPES_AS_CONCAT,ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION",
          "--tls-version=TLSv1.2,TLSv1.3",
          "--max-connections=500",
          "--log_error_verbosity=1"
        ]
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: mysql-data
            mountPath: /var/lib/mysql
        readinessProbe:
          exec:
            command:
              - mysqladmin
              - ping
              - --user=${MYSQL_USER}
              - -h
              - 127.0.0.1
              - --silent
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
              - mysqladmin
              - ping
              - --user=${MYSQL_USER}
              - -h
              - 127.0.0.1
              - --silent
          initialDelaySeconds: 30
          periodSeconds: 300  # 5 minutes
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: dbdata
---
apiVersion: v1
kind: Service
metadata:
  name: testcenter-db
  namespace: tc
spec:
  selector:
    app: testcenter-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
