kubernetes/migration/fe.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: fe-pod
  template:
    metadata:
      labels:
        app: fe-pod
    spec:
      containers:
        - name: fe-container
          image: iqbberlin/testcenter-frontend:15.2.0
          ports:
            - name: http-container
              containerPort: 80 #interner port innerhalb von cluster
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf.template
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config-configmap
            items:
              - key: config.nginx.conf
                path: default.conf.template
---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: fe-pod
  ports:
    - name: http-service
      port: 80 #interner port innerhalb von cluster
      targetPort: http-container
  type: NodePort
