kubernetes/migration/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testcenter-api-ingress
  #namespace: testcenter
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "Referrer-Policy: no-referrer";
spec:
  ingressClassName: nginx
  rules:
#  - host: minikube-ip-defined-in-hosts.example
    - http:
        paths:
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: testcenter-backend-service
              port:
                number: 80
        - path: /fs(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: testcenter-file-service
              port:
                number: 80
        - path: /bs/public(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: testcenter-broadcasting-service
              port:
                number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testcenter-fe-ingress
  #namespace: testcenter
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: SAMEORIGIN";
      more_set_headers "Referrer-Policy: no-referrer";
spec:
  ingressClassName: nginx
  rules:
#    - host: minikube-ip-defined-in-hosts.example
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-service
                port:
                  number: 80
